runners/recentdocuments: Fix results being discarded when casing is different

BUG: 474782
FIXED-IN: 5.27.9
Regression from ecfc27c245a84085127982b43af92b8148740922

Test Plan:
- Create a file called MyTextFile.txt
- Open it in any KDE app so it is in the recent files list
- "MyTextFile" should work as before and provide the result
- "textfile" as a query should only provide a result with this change

Cherry-picked from 28ced0e1e0bc5f62f107b3e6871fda60277297e8