runners/recentdocuments/recentdocuments.cpp
@@ -84,7 +84,7 @@ void RecentDocuments::match(Plasma::RunnerContext &context)
         } else if (url.fileName().startsWith(term, Qt::CaseInsensitive)) {
             match.setRelevance(relevance + 0.1);
             match.setType(Plasma::QueryMatch::PossibleMatch);
-        } else if (!url.fileName().contains(term)) {
+        } else if (!url.fileName().contains(term, Qt::CaseInsensitive)) {
             continue;
         }
 
